--- a/Carrito.html
+++ b/Carrito.html
@@ -12,7 +12,7 @@
   <header>
     <h1>Tu Carrito</h1>
     <nav>
-      <a href="main.html">Inicio</a>
+      <a href="index.html">Inicio</a>
     </nav>
   </header>
 
@@ -50,3 +50,4 @@
   </footer>
 </body>
 </html>
+
