Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <img src="logo3.png" alt="UNDERWORLD" class="logo-marca">
     <div class="button-container">
       <button class="button">
-        <a href="carrito.html"><strong>🛒</strong></a>
+        <a href="Carrito.html"><strong>🛒</strong></a>
       </button>
       <button class="button">
         <a href="Inicio_sesion.html">Log in ➜</a>
@@ -64,3 +64,4 @@
   </footer>
 </body>
 </html>
+
