--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
   <meta charset="UTF-8">
   <title>Tienda UNDERWORLD</title>
@@ -64,4 +64,5 @@
   </footer>
 </body>
 </html>
+
 
