Add login button to header
Added a login button to the header section.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       <button class="button">
         <a href="Inicio_sesion.html">Log in ➜</a>
       </button>
+      <button class="button">
+        <a href="#"><strong>👤</strong></a>
+      </button>
     </div>
   </header>
 
@@ -64,5 +67,6 @@
   </footer>
 </body>
 </html>
+
 
 
